# ceph-msg

./: .gitignore  CMakeLists.txt  README.md
auth/: Auth.h  AuthClientHandler.h  AuthMethodList.cc  AuthMethodList.h  Crypto.cc  Crypto.h  KeyRing.cc
auth/cephx/: CephxKeyServer.h  CephxProtocol.cc  CephxProtocol.h  CephxSessionHandler.cc
auth/none/: AuthNoneAuthorizeHandler.cc  AuthNoneProtocol.h
auth/unknown/: AuthUnknownProtocol.h
common/: BackTrace.h  Checksummer.h  CommandTable.h  EventTrace.cc  LogClient.cc  LogEntry.cc  RWLock.h  aix_errno.cc  buffer.cc  ceph_context.h  ceph_crypto.h  ceph_hash.cc  ceph_strings.cc  code_environment.cc  crc32c_aarch64.c  crc32c_aarch64.h  crc32c_intel_fast.c  crc32c_ppc.c  darwin_errno.cc  dout.h  errno.cc  freebsd_errno.cc  hobject.cc  legacy_config_opts.h  module.c  options.cc  sctp_crc32.c  shared_mutex_debug.cc  solaris_errno.cc  strtol.cc  strtol.h  valgrind.h  zipkin_trace.h
common/async/: yield_context.h
global/: signal_handler.h
include/: acconfig.h  btree_map.h  byteorder.h  ceph_fs.h  compat.h  coredumpctl.h  denc.h  encoding.h  filepath.h  frag.h  hash.h  int_types.h  linux_fiemap.h  msgr.h  rados.h  rbd_types.h  stat.h  types.h  utime.h
msg/: CMakeLists.txt  Message.cc  Message.h  msg_types.cc  msg_types.h
msg/async/: AsyncConnection.cc  AsyncMessenger.cc  AsyncMessenger.h  ProtocolV1.cc  ProtocolV1.h  ProtocolV2.cc  Stack.cc  frames_v2.h  net_handler_test.cc
msg/simple/: Pipe.cc  Pipe.h  SimpleMessenger.h
msg/xio/: XioConnection.cc  XioMessenger.cc
